--- a/css/style.css
+++ b/css/style.css
@@ -11,5 +11,972 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #23262D;
+  font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
+}
+:root{
+  --font-poppins:font-family: 'Poppins', sans-serif;
 }
 
+.container{
+  width: 100%;
+  margin: 0 auto;
+  /* padding: 0 90px; */
+}
+
+.header{
+  width: 100%;
+  padding: 20px 90px;
+}
+
+.header__logo {
+
+}
+.header__phone-link  a{
+  color: #fff;
+  text-decoration: none;
+}
+.header__tel {
+ font-family: 'Poppins', sans-serif; 
+  font-size: 14px;
+  /* font-weight: 600; */
+  text-transform: uppercase;
+  margin-right: 40px; 
+}
+.bx-menu{
+  font-size: 25px;
+  color: #fff;
+}
+.bx-menu:hover{
+  color: rgb(172, 168, 168);
+}
+
+
+.hero {
+  padding: 0 90px;
+  width: 100vw;
+  height: 100vh;
+  
+}
+.hero__img { 
+  background-image: url('../images/home-img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 75vh;
+  padding-left: 20%;
+  padding-top: 10%;
+  position: relative;
+}
+.hero__anime {
+  animation: name duration timing-function delay iteration-count direction fill-mode;
+
+}
+.hero__01 {
+  z-index: 100;
+  /* position: relative; */
+  padding-bottom: 50px;
+  padding-top: 5px;
+  padding-left: 0;
+  padding-right: 2%;
+  background-color: #CEE002;
+  color: #23262D;
+  font-size: 100px;
+  font-weight: 600;
+  margin-right: 50px;
+}
+.hero__anime-title {
+  font-size: 50px;
+  font-weight: 600;
+  color: #fff;
+  margin-bottom: 20px;
+  line-height: 1em;
+}
+.hero__anime-text {
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  width: 140px;
+  padding-bottom: 3px;
+  text-transform: uppercase;
+  border-bottom: 2px solid #fff;
+  cursor: pointer;
+}
+
+.hero__arrow {
+  font-size: 25px;
+  padding: 30px;
+  color: #fff;
+  background-color: #23262d;
+}
+
+.hero__arrow:first-child {
+  background-color: #34373e;
+  transition: all 0.3s ease;
+}
+
+.hero__arrow:first-child:hover {
+  background-color: #23262d;
+  transition: all 0.3s ease;
+}
+
+.hero__icons {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+.modal{
+  height: 100vh;
+  background-color: #23262D;
+  opacity: 0;
+  z-index: 100;
+  transition: all 0.5s linear;
+  position: fixed;
+  top: 0;
+  right: 0px;
+  width: 0;
+}
+.show {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 60%;
+  height: 100vh;
+  opacity: 1;
+  z-index: 100;
+}
+.modal__list {
+  position: absolute;
+  top: 80px;
+  right: 130px;
+  height: 280px;
+}
+
+.modal__list-item {
+  color: #fff;
+  margin-bottom: 25px;
+  list-style: none;
+}
+.modal__link {
+  position: relative;
+  font-size: 44px;
+  text-decoration: none;
+  color: #fff;
+  right: 50px;
+}
+.modal__link::before {
+  content: '';
+  width: 1px;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  opacity: 0;
+  border-bottom: 2px solid rgb(134, 130, 130);
+  display: inline-block;
+  transition: all 0.3s linear;
+}
+.modal__link:hover::before{
+  width: 100%;
+  opacity: 1;
+}
+.modal__link:hover {
+  color: rgb(121, 118, 118);
+}
+.modal__exit {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  font-size: 35px;
+  color: #fff;
+  transition: all 0.2s ease;
+}
+.modal__exit:hover{
+  color: rgb(119, 116, 116);
+}
+
+.modal__img {
+  width: 50%;
+  height: 100vh;
+}
+
+.modal__icons {
+  position: absolute;
+  right: 210px;
+  bottom: 25px;
+  color: #fff;
+}
+.icons__item:hover{
+  color: rgb(133, 129, 129);
+}
+.icons__item {
+  list-style: none;
+  margin-bottom: 20px;
+}
+.icons__link {
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: #fff;
+  transition: all 0.3s ease;
+}
+.icons__link::before {
+  position: absolute;
+  bottom: -10px;
+  content: '';
+  width: 250px;
+  border-bottom: 1px solid #fff;
+}
+.icons__link:hover {
+  color: var(--hover);
+}
+.modal-socials {
+  font-size: 20px;
+  margin-right: 15px;
+  color: #fff;
+}
+
+
+
+
+.years {
+  /* padding: 0 90px ; */
+}
+.company{
+  width: 100%;
+
+}
+.company__item:not(:last-child) {
+  /* margin-right: 50px; */
+  margin-left: 50px;
+  list-style: none;
+}
+.last{
+  list-style: none;
+}
+.company__year-right {
+  border: 10px solid #ffffff1a;
+  position: relative;
+  top: -5px;
+  right: -60px;
+  height: 170px;
+  width: 80px;
+  border-left: none;
+}
+.company__year-text {
+  position: absolute;
+  top: 35px;
+  right: 25px;
+  font-weight: 600;
+}
+.company__year-left {
+  border: 10px solid #ffffff1a;
+  position: relative;
+  top: -5px;
+  left: -60px;
+  height: 170px;
+  width: 80px;
+  border-right: none;
+}
+.company__since{
+  position: relative;
+  left: 20px;
+}
+.company__num-abs{ 
+  position: absolute;
+  top: 40px;
+  left: 45px;
+}
+.company__num {
+  color: rgb(219, 223, 30);
+  font-size: 80px;
+  font-weight: 600;
+  line-height: 72px;
+  letter-spacing: -5px;
+  margin-bottom: 0;
+  margin-right: 18px;
+}
+
+.company__year {
+  position: relative;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #fff;
+}
+
+.company__span {
+  color: #767676;
+  font-weight: 500;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+.company__year-since {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 34px;
+  width: 190px;
+  color: #fff;
+}
+
+.company__year-lorem {
+  font-size: 15px;
+  line-height: 30px;
+  color: #828282;
+  margin-bottom: 20px; 
+}
+.workling__link {
+  position: relative;
+  font-weight: 500;
+  text-decoration: none;
+  color: #939393;
+  transition: all 0.2s ease;
+}
+
+.workling__link::before {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  width: 100%;
+  border-bottom: 2px solid #939393;
+  transition: all 0.2s ease;
+}
+.workling__link:hover {
+  color: #767676;
+}
+.workling__link:hover::before {
+  color: #767676;
+} 
+
+
+
+
+.house {
+  padding-top: 160px;
+}
+
+.video {
+  position: relative;
+  background-image: url('https://litho.themezaa.com/wp-content/uploads/2020/06/architecture-img-14.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 90vh;
+}
+
+.video__play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 70px;
+  height: 70px;
+  border-radius: 10px;
+  background-color: var(--color);
+  border-radius: 50%;
+}
+.video__name {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: var(--body-color);
+  width: 630px;
+  height: 150px;
+}
+.video__title {
+  position: absolute;
+  top: 55px;
+  left: 80px;
+  font-size: 40px;
+  font-weight: 600;
+  color: var(--color-white);
+}
+.video__span {
+  color: var(--color);
+  position: relative;
+}
+.video__span::before {
+  content: '';
+  width: 100%;
+  border-bottom: 1px solid var(--color);
+  position: absolute;
+  bottom: 0;
+}
+
+.company {
+  padding-top: 0px;
+  padding-bottom: 50px;
+}
+.parters__list {
+ list-style: none; 
+}
+.parters__link {
+  color: #767676;
+}
+
+
+
+
+.boxes {
+  padding-bottom: 100px;
+}
+.container__fluid{
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 90px;
+}
+.boxes__list {
+  list-style-type: none;
+  display: flex;
+  /* justify-content: space-between; */
+  width: 100%;
+}
+
+.boxes__item {
+  position: relative;
+  width: calc(25% - 5px);
+  height: 420px;
+  padding: 0 15px;
+  overflow: hidden;
+}
+
+.boxes__imgbox {
+  overflow: hidden;
+}
+
+.boxes__item:hover .boxes__imgbox {
+  opacity: 0.5;
+}
+
+.boxes__img {
+  width: 340px;
+  height: 480px;
+  transition: all 3s linear;
+}
+
+.boxes__item:hover .boxes__img {
+  transform: scale(1.4);
+}
+
+.boxes__title {
+  position: absolute;
+  top: 60px;
+  left: 16%;
+  width: 150px;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 40px;
+  color: #fff;
+  padding-right: 50px;
+}
+
+.boxes__btn {
+  position: absolute;
+  bottom: 27%;
+  left: 60px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  transition: all 0.5s linear;
+}
+
+.boxes__item:hover .boxes__btn {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  transform: translateY(-25px);
+  transform: translateX(25px);
+}
+
+.icon-right {
+  position: relative;
+  top: 13px;
+  font-size: 26px;
+  color: #23262d;
+  transition: all 0.5s linear;
+}
+
+.boxes__item:hover .icon-right {
+  font-size: 0;
+  opacity: 0;
+  transform: translateY(-15px);
+}
+
+.boxes__box {
+  position: relative;
+  top: -180px;
+  padding: 0 60px;
+  opacity: 0;
+  transition: all 0.5s linear;
+  transform: translateY(70px);
+}
+
+.boxes__item:hover .boxes__box {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+.boxes__desc {
+  font-size: 16px;
+  line-height: 40px;
+  color: #828282;
+  margin-bottom: 20px;
+}
+
+.boxes__link {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 16px;
+  color: #cee002;
+}
+
+.icon-right-link {
+  margin-left: 10px;
+}
+
+
+
+.about {
+  padding: 0 90px;
+}
+
+.about__main {
+  padding-top: 130px;
+}
+
+.about__title {
+  width: 430px;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 45px;
+  color: #fff;
+  margin-right: 80px;
+}
+
+.about__list {
+  list-style: none;
+}
+
+.about__heading {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 15px;
+  letter-spacing: 1px;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.about__text {
+  font-family: sans-serif;
+  width: 215px;
+  font-size: 15px;
+  color: #828282;
+  line-height: 30px;
+}
+.social {
+  position: relative;
+  padding-top: 160px;
+}
+
+.social__box {
+  width: 100%;
+  height: 65vh;
+  background-image: url('../images/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* opacity: 0.5; */
+}
+
+.social__imgbox {
+  width: 75px;
+  height: 75px;
+  position: absolute;
+  top: 60%;
+  left: 48%;
+  border-radius: 10px;
+  background-color: #cee002;
+  border-radius: 50%;
+  z-index: 5;
+}
+.social__imgbox::before {
+  content: '';
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  transform: translate(50px, 50px) ;
+  border: 10px solid #cde00254;
+  border-radius: 50%;
+  transform: scale(0);
+  animation: radius 2s linear infinite;
+}
+@keyframes radius {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1.3);
+  }
+}
+
+.social__img {
+  position: relative;
+  top: 25px;
+  left: 25px;
+}
+
+.social__main {
+  width: 585px;
+  background-color: #23262d;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 0 91px;
+  padding-top: 77px;
+  opacity: 1;
+}
+
+.social__title {
+  font-weight: 500;
+  font-size: 39px;
+  line-height: 3.4rem;
+  color: #fff;
+  opacity: 1;
+}
+
+.social__yellowtext {
+  color: #cee002;
+  position: relative;
+}
+
+
+
+.partners {
+  padding-top: 160px;
+}
+
+.partners__main {
+  padding: 0 90px;
+}
+.partners__list {
+ list-style: none; 
+}
+.parters__link {
+
+  color: #a7a8ab;
+}
+
+.hr__container{
+  width: 100%;
+}
+.line-select{
+
+  margin: 50px auto;
+}
+.line1{
+  width: 44%;
+  color: #CEE002;
+}
+.selected-line{
+  font-size: 20px;
+  color: #CEE002;
+}
+.line2{
+  color: #CEE002;
+  width: 44%;
+}
+
+
+
+
+
+.design {
+  width: 100%;
+  margin: 50px auto;
+}
+.design__container{
+  width: 100%;
+  padding: 0 90px;
+}
+.design__card {
+  width: 1330px;
+  text-align: center;
+  margin:  0 auto;
+}
+.design__card-img {
+  position: relative;
+  width: 270px;
+  height: 345px;
+  margin-bottom: 15px;
+}
+.design__card-item{
+  margin-right: 20px;
+}
+.design__card-item:hover{
+  transition: all 0.2s linear;
+  transform: translateY(-10px);
+}
+.design__card-item{
+  transition: all 0.2s linear;
+}
+.design__background-yellow{
+  width: 270px;
+  height: 345px;
+  background-color: #cee002;
+  position: absolute;
+  top: -0px;
+  opacity: 0;
+  transition: all 0.2 ease;
+}
+.design__card-item:hover .design__background-yellow{
+  opacity: 0.8;
+  transition: all 0.2 ease;
+}
+
+.design__card-img:hover
+.design__card-centre{
+  transition: all 0.5s ease;
+  bottom: 40%;
+  left: 40%;
+  opacity: 1;
+}
+
+.design__card-centre{
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 50%;  
+  position: absolute;
+  bottom: 70px;
+  left: 40%;
+  opacity: 0;
+
+}
+.design__link-play{
+  font-size: 15px;
+}
+.design__title{
+  text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+.design__text{
+  font-size: 15px;
+  color: #767676;
+
+}
+.design__card-item{
+  width: 270px;
+  height: 380px;
+  padding: 10px;
+  text-align: center;
+}
+
+
+
+
+.offices {
+  position: relative;
+  margin-top: 160px;
+  background-color: #1b1d24; 
+  height: 550px;
+}
+.map {
+  background-color: #1b1d24; 
+  height: 550px;
+}
+.map__wor {
+  position: absolute;
+  top: 200px;
+  left: -100px;
+  font-size: 150px;
+  color: #fff;
+  opacity: 0.5;
+}
+.map__pic {
+  position: absolute;
+  top: 150px;
+  left: 300px;
+}
+
+.map__name {
+  position: absolute;
+  top: 150px;
+  right: 0;
+}
+.map__title {
+  width: 350px;
+  font-size: 34px;
+  font-weight: 500;
+  line-height: 1.5;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.map__p {
+  width: 450px;
+  line-height: 1.5;
+  margin-bottom: 30px;
+  color: #fff;
+}
+
+.map__link {
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.creative {
+  padding: 100px 0px;
+}
+
+.creative__sub {
+  padding-bottom: 70px;
+  padding-top: 70px;
+}
+
+.creative__name {
+  font-size: 15px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #cee002;
+  text-transform: uppercase;
+  text-align: center;
+  margin-right: 25px;
+  margin-left: 25px;
+}
+
+.hr {
+  width: 42%;
+  height: 1px;
+  background-color: #ffffff1a;
+}
+
+.hrt {
+  width: 42%;
+  height: 1px;
+  background-color: #ffffff1a;
+}
+
+.creative__entry {
+  position: relative;
+  width: 304px;
+  height: 304px;
+  overflow: hidden;
+}
+
+.creative__info {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.creative__ims {
+  object-fit: cover;
+  transition: all 0.3s ease-in-out;
+}
+
+.creative__entry:hover .creative__ims {
+  transform: scale(1.05);
+  transition: all 0.3s ease-in-out;
+}
+
+.creative__entry:hover .creative__link {
+  background-color: #fff;
+  color: #0e0f12;
+  transition: all 0.3s ease;
+}
+
+.creative__link {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 500;
+  background-color: rgba(23, 23, 23, .75);
+  color: #fff;
+  border-radius: 2px;
+  padding: 5px 13px;
+  text-transform: uppercase;
+  line-height: 20px;
+  margin-bottom: 80px;
+  transition: all 0.3s ease;
+}
+
+.creative__date {
+  font-weight: 500;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 13px;
+  line-height: 22px;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.creative__title {
+  width: 187px;
+  line-height: 28px;
+  font-size: 20px;
+  letter-spacing: -0.5px;
+  color: #fff;
+}
+
+.creative__pro {
+  padding-top: 80px;
+}
+
+.creative__ready {
+  font-size: 25px;
+  font-weight: 600;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  line-height: 2.5rem;
+}
+
+.creative__project {
+  display: inline-block;
+  margin-left: 5px;
+  text-decoration: none;
+  font-weight: 600;
+  color: #cee002;
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  line-height: 2.5rem;
+  border-bottom: 1px solid #cee002;
+  transition: all 0.3s ease;
+}
+
+.creative__project:hover {
+  color: #fff;
+  transition: all 0.3 ease;
+  border-bottom: 1px solid #fff;
+}
+
+
+.footer p{
+  font-size: 14px;
+  color: #767676;
+}
+.footer{
+  padding: 20px 10px;
+}
+.footer__socials{
+  margin-right: 20px;
+} 
+.footer__hr{
+  /* color: rgb(19, 16, 16); */
+}
