--- a/css/style.css
+++ b/css/style.css
@@ -15,40 +15,43 @@ body {
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
 }
-:root{
-  --font-poppins:font-family: 'Poppins', sans-serif;
+
+:root {
+  --font-poppins: font-family: 'Poppins', sans-serif;
 }
 
-.container{
+.container {
   width: 100%;
   margin: 0 auto;
   /* padding: 0 90px; */
 }
 
-.header{
+.header {
   width: 100%;
   padding: 20px 90px;
 }
 
-.header__logo {
+.header__logo {}
 
-}
-.header__phone-link  a{
+.header__phone-link a {
   color: #fff;
   text-decoration: none;
 }
+
 .header__tel {
- font-family: 'Poppins', sans-serif; 
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   /* font-weight: 600; */
   text-transform: uppercase;
-  margin-right: 40px; 
+  margin-right: 40px;
 }
-.bx-menu{
+
+.bx-menu {
   font-size: 25px;
   color: #fff;
 }
-.bx-menu:hover{
+
+.bx-menu:hover {
   color: rgb(172, 168, 168);
 }
 
@@ -57,9 +60,10 @@ body {
   padding: 0 90px;
   width: 100vw;
   height: 100vh;
-  
+
 }
-.hero__img { 
+
+.hero__img {
   background-image: url('../images/home-img.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -70,10 +74,12 @@ body {
   padding-top: 10%;
   position: relative;
 }
+
 .hero__anime {
   animation: name duration timing-function delay iteration-count direction fill-mode;
 
 }
+
 .hero__01 {
   z-index: 100;
   /* position: relative; */
@@ -87,6 +93,7 @@ body {
   font-weight: 600;
   margin-right: 50px;
 }
+
 .hero__anime-title {
   font-size: 50px;
   font-weight: 600;
@@ -94,6 +101,7 @@ body {
   margin-bottom: 20px;
   line-height: 1em;
 }
+
 .hero__anime-text {
   font-size: 14px;
   font-weight: 600;
@@ -132,7 +140,7 @@ body {
 
 
 
-.modal{
+.modal {
   height: 100vh;
   background-color: #23262D;
   opacity: 0;
@@ -143,6 +151,7 @@ body {
   right: 0px;
   width: 0;
 }
+
 .show {
   position: fixed;
   top: 0;
@@ -152,6 +161,7 @@ body {
   opacity: 1;
   z-index: 100;
 }
+
 .modal__list {
   position: absolute;
   top: 80px;
@@ -164,6 +174,7 @@ body {
   margin-bottom: 25px;
   list-style: none;
 }
+
 .modal__link {
   position: relative;
   font-size: 44px;
@@ -171,6 +182,7 @@ body {
   color: #fff;
   right: 50px;
 }
+
 .modal__link::before {
   content: '';
   width: 1px;
@@ -183,13 +195,16 @@ body {
   display: inline-block;
   transition: all 0.3s linear;
 }
-.modal__link:hover::before{
+
+.modal__link:hover::before {
   width: 100%;
   opacity: 1;
 }
+
 .modal__link:hover {
   color: rgb(121, 118, 118);
 }
+
 .modal__exit {
   position: absolute;
   right: 20px;
@@ -198,7 +213,8 @@ body {
   color: #fff;
   transition: all 0.2s ease;
 }
-.modal__exit:hover{
+
+.modal__exit:hover {
   color: rgb(119, 116, 116);
 }
 
@@ -213,13 +229,16 @@ body {
   bottom: 25px;
   color: #fff;
 }
-.icons__item:hover{
+
+.icons__item:hover {
   color: rgb(133, 129, 129);
 }
+
 .icons__item {
   list-style: none;
   margin-bottom: 20px;
 }
+
 .icons__link {
   position: relative;
   text-decoration: none;
@@ -228,6 +247,7 @@ body {
   color: #fff;
   transition: all 0.3s ease;
 }
+
 .icons__link::before {
   position: absolute;
   bottom: -10px;
@@ -235,9 +255,11 @@ body {
   width: 250px;
   border-bottom: 1px solid #fff;
 }
+
 .icons__link:hover {
   color: var(--hover);
 }
+
 .modal-socials {
   font-size: 20px;
   margin-right: 15px;
@@ -250,18 +272,22 @@ body {
 .years {
   /* padding: 0 90px ; */
 }
-.company{
+
+.company {
   width: 100%;
 
 }
+
 .company__item:not(:last-child) {
   /* margin-right: 50px; */
   margin-left: 50px;
   list-style: none;
 }
-.last{
+
+.last {
   list-style: none;
 }
+
 .company__year-right {
   border: 10px solid #ffffff1a;
   position: relative;
@@ -271,12 +297,14 @@ body {
   width: 80px;
   border-left: none;
 }
+
 .company__year-text {
   position: absolute;
   top: 35px;
   right: 25px;
   font-weight: 600;
 }
+
 .company__year-left {
   border: 10px solid #ffffff1a;
   position: relative;
@@ -286,15 +314,18 @@ body {
   width: 80px;
   border-right: none;
 }
-.company__since{
+
+.company__since {
   position: relative;
   left: 20px;
 }
-.company__num-abs{ 
+
+.company__num-abs {
   position: absolute;
   top: 40px;
   left: 45px;
 }
+
 .company__num {
   color: rgb(219, 223, 30);
   font-size: 80px;
@@ -319,6 +350,7 @@ body {
   display: inline-block;
   margin-bottom: 20px;
 }
+
 .company__year-since {
   font-size: 20px;
   font-weight: 500;
@@ -331,8 +363,9 @@ body {
   font-size: 15px;
   line-height: 30px;
   color: #828282;
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
 }
+
 .workling__link {
   position: relative;
   font-weight: 500;
@@ -349,12 +382,14 @@ body {
   border-bottom: 2px solid #939393;
   transition: all 0.2s ease;
 }
+
 .workling__link:hover {
   color: #767676;
 }
+
 .workling__link:hover::before {
   color: #767676;
-} 
+}
 
 
 
@@ -376,13 +411,14 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   width: 70px;
   height: 70px;
   border-radius: 10px;
   background-color: var(--color);
   border-radius: 50%;
 }
+
 .video__name {
   position: absolute;
   right: 0;
@@ -391,6 +427,7 @@ body {
   width: 630px;
   height: 150px;
 }
+
 .video__title {
   position: absolute;
   top: 55px;
@@ -399,10 +436,12 @@ body {
   font-weight: 600;
   color: var(--color-white);
 }
+
 .video__span {
   color: var(--color);
   position: relative;
 }
+
 .video__span::before {
   content: '';
   width: 100%;
@@ -415,9 +454,11 @@ body {
   padding-top: 0px;
   padding-bottom: 50px;
 }
+
 .parters__list {
- list-style: none; 
+  list-style: none;
 }
+
 .parters__link {
   color: #767676;
 }
@@ -428,11 +469,13 @@ body {
 .boxes {
   padding-bottom: 100px;
 }
-.container__fluid{
+
+.container__fluid {
   width: 100%;
   margin: 0 auto;
   padding: 0 90px;
 }
+
 .boxes__list {
   list-style-type: none;
   display: flex;
@@ -480,7 +523,7 @@ body {
 
 .boxes__btn {
   position: absolute;
-  bottom: 27%;
+  bottom: 10%;
   left: 60px;
   display: inline-block;
   width: 50px;
@@ -515,8 +558,8 @@ body {
 
 .boxes__box {
   position: relative;
-  top: -180px;
-  padding: 0 60px;
+  top: -280px;
+  padding: 0 20px;
   opacity: 0;
   transition: all 0.5s linear;
   transform: translateY(70px);
@@ -585,6 +628,7 @@ body {
   color: #828282;
   line-height: 30px;
 }
+
 .social {
   position: relative;
   padding-top: 160px;
@@ -610,6 +654,7 @@ body {
   border-radius: 50%;
   z-index: 5;
 }
+
 .social__imgbox::before {
   content: '';
   display: inline-block;
@@ -618,16 +663,18 @@ body {
   position: absolute;
   top: -3px;
   left: -3px;
-  transform: translate(50px, 50px) ;
+  transform: translate(50px, 50px);
   border: 10px solid #cde00254;
   border-radius: 50%;
   transform: scale(0);
   animation: radius 2s linear infinite;
 }
+
 @keyframes radius {
   0% {
     transform: scale(0);
   }
+
   100% {
     transform: scale(1.3);
   }
@@ -672,30 +719,36 @@ body {
 .partners__main {
   padding: 0 90px;
 }
+
 .partners__list {
- list-style: none; 
+  list-style: none;
 }
+
 .parters__link {
 
   color: #a7a8ab;
 }
 
-.hr__container{
+.hr__container {
   width: 100%;
 }
-.line-select{
+
+.line-select {
 
   margin: 50px auto;
 }
-.line1{
+
+.line1 {
   width: 44%;
   color: #CEE002;
 }
-.selected-line{
+
+.selected-line {
   font-size: 20px;
   color: #CEE002;
 }
-.line2{
+
+.line2 {
   color: #CEE002;
   width: 44%;
 }
@@ -706,34 +759,39 @@ body {
 
 .design {
   width: 100%;
-  margin: 50px auto;
 }
-.design__container{
+
+.design__container {
   width: 100%;
   padding: 0 90px;
 }
+
 .design__card {
-  width: 1330px;
   text-align: center;
-  margin:  0 auto;
+  margin: 0 auto;
 }
+
 .design__card-img {
   position: relative;
   width: 270px;
   height: 345px;
   margin-bottom: 15px;
 }
-.design__card-item{
+
+.design__card-item {
   margin-right: 20px;
 }
-.design__card-item:hover{
+
+.design__card-item:hover {
   transition: all 0.2s linear;
   transform: translateY(-10px);
 }
-.design__card-item{
+
+.design__card-item {
   transition: all 0.2s linear;
 }
-.design__background-yellow{
+
+.design__background-yellow {
   width: 270px;
   height: 345px;
   background-color: #cee002;
@@ -742,44 +800,48 @@ body {
   opacity: 0;
   transition: all 0.2 ease;
 }
-.design__card-item:hover .design__background-yellow{
+
+.design__card-item:hover .design__background-yellow {
   opacity: 0.8;
   transition: all 0.2 ease;
 }
 
-.design__card-img:hover
-.design__card-centre{
+.design__card-img:hover .design__card-centre {
   transition: all 0.5s ease;
   bottom: 40%;
   left: 40%;
   opacity: 1;
 }
 
-.design__card-centre{
+.design__card-centre {
   padding: 10px;
   background-color: #fff;
-  border-radius: 50%;  
+  border-radius: 50%;
   position: absolute;
   bottom: 70px;
   left: 40%;
   opacity: 0;
 
 }
-.design__link-play{
+
+.design__link-play {
   font-size: 15px;
 }
-.design__title{
+
+.design__title {
   text-transform: uppercase;
   color: #fff;
   margin-bottom: 10px;
   font-size: 15px;
 }
-.design__text{
+
+.design__text {
   font-size: 15px;
   color: #767676;
 
 }
-.design__card-item{
+
+.design__card-item {
   width: 270px;
   height: 380px;
   padding: 10px;
@@ -792,13 +854,15 @@ body {
 .offices {
   position: relative;
   margin-top: 160px;
-  background-color: #1b1d24; 
+  background-color: #1b1d24;
   height: 550px;
 }
+
 .map {
-  background-color: #1b1d24; 
+  background-color: #1b1d24;
   height: 550px;
 }
+
 .map__wor {
   position: absolute;
   top: 200px;
@@ -807,6 +871,7 @@ body {
   color: #fff;
   opacity: 0.5;
 }
+
 .map__pic {
   position: absolute;
   top: 150px;
@@ -818,6 +883,7 @@ body {
   top: 150px;
   right: 0;
 }
+
 .map__title {
   width: 350px;
   font-size: 34px;
@@ -967,16 +1033,20 @@ body {
 }
 
 
-.footer p{
+.footer p {
   font-size: 14px;
   color: #767676;
 }
-.footer{
+
+.footer {
   padding: 20px 10px;
 }
-.footer__socials{
+
+.footer__socials {
   margin-right: 20px;
-} 
-.footer__hr{
+  cursor: pointer;
+}
+
+.footer__hr {
   /* color: rgb(19, 16, 16); */
 }
